--- a/consulta.html
+++ b/consulta.html
@@ -18,7 +18,7 @@
     <script src="app.js"></script>
 	</head>
 
-  <body>
+  <body onload="carregaListaDespesas()">
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
@@ -56,6 +56,10 @@
           <select class="form-control" id="ano">
             <option value="">Ano</option>
             <option value="2018">2018</option>
+            <option value="2018">2019</option>
+            <option value="2018">2020</option>
+            <option value="2018">2021</option>
+            <option value="2018">2022</option>
           </select>
         </div>
 
