--- a/consulta.html
+++ b/consulta.html
@@ -56,10 +56,10 @@
           <select class="form-control" id="ano">
             <option value="">Ano</option>
             <option value="2018">2018</option>
-            <option value="2018">2019</option>
-            <option value="2018">2020</option>
-            <option value="2018">2021</option>
-            <option value="2018">2022</option>
+            <option value="2019">2019</option>
+            <option value="2020">2020</option>
+            <option value="2021">2021</option>
+            <option value="2022">2022</option>
           </select>
         </div>
 
@@ -87,7 +87,7 @@
 
         <div class="col-md-6">
           <select class="form-control" id="tipo">
-            <option>Tipo</option>
+            <option value="">Tipo</option>
             <option value="1">Alimentação</option>
             <option value="2">Educação</option>
             <option value="3">Lazer</option>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="col-md-2 d-flex justify-content-end">
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-primary" onclick="pesquisarDespesa()">
             <i class="fas fa-search"></i>
           </button>
         </div>
@@ -126,7 +126,8 @@
               </tr>
             </thead>
 
-            <tbody>
+            <tbody id="listaDespesas">
+            
             </tbody>
           </table>
         </div>
