--- a/consulta.html
+++ b/consulta.html
@@ -90,7 +90,7 @@
             <option value="">Tipo</option>
             <option value="1">Alimentação</option>
             <option value="2">Educação</option>
-            <option value="3">Lazer</option>
+            <option value="3">Lazer</option>\
             <option value="4">Saúde</option>
             <option value="5">Transporte</option>
           </select>
