--- a/consulta.html
+++ b/consulta.html
@@ -129,6 +129,16 @@
             <tbody id="listaDespesas">
             
             </tbody>
+            <tfoot>
+              <tr>
+                <th></th>
+                <th></th>
+                <th>Total</th>
+                <th></th>
+                <th></th>
+            
+              </tr>
+            </tfoot>
           </table>
         </div>
       </div>
